--- a/styles/themes/base.less
+++ b/styles/themes/base.less
@@ -179,6 +179,15 @@ html {
 	margin-top:-60px;
 	display:inline-block; /* required for webkit browsers */
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	padding-top:calc(~".5em + 60px");
+	margin-top:-60px;
+}
 
 @import "components/headers.less";
 @import "components/toc.less";
